third part done

--- a/index.html
+++ b/index.html
@@ -43,19 +43,46 @@
     <section class="second">
         <div class="half-two">
             <img class="food" src="images/food/Project Cover7.png" alt="pasta">
-          </div>
+        </div>
 
         <div class="half-two">
             <h2>About Food</h2>
-            <p class="uno">There is a misconception that healthy food is often testeless. I differ this point. For a healthy
+            <p class="uno">There is a misconception that healthy food is often testeless. I differ this point. For a
+                healthy
                 lifestyle, Healthy foods are the biggest companion.Healthy foods can also be very tasty if we properly
                 know how to make them.</p>
 
-                <a class="link" target="_blank"
-                href="https://www.foodpanda.com.bd/">ORDER FOOD</a>
+            <a class="link" target="_blank" href="https://www.foodpanda.com.bd/">ORDER FOOD</a>
         </div>
     </section>
 
+    <div class="duo">
+        <h2>My Knowledge</h2>
+        <p>I know people don't easily trust others with their health issues. Atleast not a stranger. I may be a stranger
+            but I have the proper knowledge and education. I always had the dream working for the betterment of people.
+            I wish I can can filful that.</p>
+    </div>
+
+
+    
+
+
+    <section>
+        <div class="third">
+            <div class="trio-elm">
+                <h2>800k</h2>
+                <p class="thin">youtube subscribers</p>
+            </div>
+            <div class="trio-elm">
+                <h2>3.6M</h2>
+                <p class="thin">Instagram Followers</p>
+            </div>
+            <div class="trio-elm">
+                <h2>150K</h2>
+                <p class="thin">Dribble Shot Likes</p>
+            </div>
+        </div>
+    </section>
 
 </body>
 
