--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         </div>
     </section>
 
+  
+
+
     <div class="duo">
         <h2>My Knowledge</h2>
         <p>I know people don't easily trust others with their health issues. Atleast not a stranger. I may be a stranger
@@ -63,8 +66,50 @@
             I wish I can can filful that.</p>
     </div>
 
+<section>
+    <div class="fourth">
+        <div class="recipe">
+            <div class="recipe-image">
+                <img src="images/food/Project Cover2.png" alt="soup">
+                </div>
+                <div class="title">
+                <h2>Home-made Soup</h2>
+                <p>Since soups are mostly liquid, they're a great way to stay hydrated and full. They give your immune
+                    system a boost. Soups can help you stave off cold and flu, and they're a great antidote for times
+                    when you are sick, too! Most soups are loaded with disease-fighting nutrients.</p>
+            </div>
+        </div>
 
-    
+       
+
+        <div>
+            <div class="recipe">
+                <div class="recipe-image">
+                    <img src="images/food/Project Cover.jpg" alt="Sandwich">
+                </div>
+                <div class="title">
+                    <h2>Sandwich</h2>
+                    <p>Developing life skills can begin with a hands-on task such as making your own sandwich. This is a great way to encourage independence, practice fine-motor skills, and foster self-confidence in your child. There is so much your child can do when given the chance, so give him the opportunity to discover what he can do.</p>
+
+    </div>
+    </div>
+    </div>
+
+        <div>
+            <div class="recipe">
+                <div class="recipe-image">
+                    <img src="images/food/Project Cover1.jpg" alt="Meat">
+                </div>
+                <div class="title">
+                    <h2>Steak & Grill</h2>
+                    <p>Steak is one of the best protein sources, and protein is important for pretty much every cell in your body. It's a macronutrient, which means your body needs a large amount of it to function. Protein is essential for keeping our hair, nails, skin, bones, cartilage and blood in good shape.</p>
+
+    </div>
+    </div>
+    </div>
+    </div>
+    </section>
+
 
 
     <section>
