--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     Lifestyle</b> is a opportunity
                 for people who really have the wish to always stay fit. A person can't ask more than their life.</p>
             <a class="link" target="_blank"
-                href="https://www.webmd.com/diet/features/4-steps-healthy-lifestyle#1">FACILITIES</a>
+                href="https://github.com/Arunimaa-Aarushi">FACILITIES</a>
         </div>
 
         <div class="half">
